--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -266,6 +266,7 @@ b {
     }
     #info #map{
         width: 80%;
+        height: 18rem;
         margin: 0 auto 4rem;
     }
     #info #map iframe {
