--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -111,14 +111,32 @@ b {
     left: 0%;
 }
 #header nav ul {
-    padding: 20px;
+    padding: 10%;
 }
 #header nav ul li {
-    margin: 40px 0;
+    margin: 4rem 0;
+    position: relative;
 }
 #header nav ul li a {
-    font-size: 4rem;
+    font-size: 2rem;
     color: #333;
+    font-weight: bold;
+    display: block;
+    transition: color 1s;
+}
+#header nav ul li a:hover {
+    color: #4568DC;
+}
+#header nav ul li span {
+    display: block;
+    width: 0%;
+    height: 0.5rem;
+    background: #4568DC;
+    position: absolute;
+    transition: width 1s;
+}
+#header nav ul li a:hover ~ span {
+    width: 100%;
 }
 /* HEADER AREA */
 
@@ -240,6 +258,11 @@ b {
         font-size: 4rem;
     }
     /* MAIN AREA */
+
+    #header nav {
+        width: 70%;
+        left: -80%;
+    }
 
     /* INTRO AREA */
     #intro h3 {
