--- a/parallax/chul/css/style.css
+++ b/parallax/chul/css/style.css
@@ -3,139 +3,55 @@
 html {
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 20px;
-  color: #fff;
+  color: #181818;
 }
-body {
-  background: #0f0c29;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+html, body {
+  width: 100%;
+  height: 100%;
 }
 .section {
-  padding: 100px 0;
-}
-/* COMMON */
-
-/* SECTION-01 */
-#sec-01 .tit h2 {
   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* SEC-01 */
+.sec-01 {
+  /* width: 100%; */
+  /* height: 100%; */
+}
+.sec-01 .bg {
+  width: 100%;
+  height: 100%;
+  background: center / cover no-repeat url(../img/peony.jpg);
+}
+.sec-01 .txt {
+  width: 40%;
+  height: 300px;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
-  width: 100%;
-  font-size: 6rem;
-  top: 30%;
-}
-/* SECTION-01 */
-
-/* SECTION-02 */
-#sec-02 .gallery-01 {
   display: flex;
-  width: 160vw;
-  position: fixed;
-  left: 100vw;
-}
-#sec-02 .gallery-01 .picture {
-  width: 20vw;
-  height: 20vw;
-  border-radius: 50%;
-  margin: 0 10vw;
-  background: gray;
-}
-/* SECTION-02 */
-
-/* SECTION-03 */
-#sec-03 .obj span {
-  display: block;
-  position: fixed;
-  border-left: 50px solid transparent;
-  border-top: 50px solid black;
-  border-right: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  top: 10%;
-  left: 20%;
-}
-/* SECTION-03 */
-
-/* SECTION-04 */
-#sec-04 .gallery-02 {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#sec-04 .gallery-02 .picture {
-  border-radius: 50%;
-  background: gray;
-  position: absolute;
-  transform: translate(-50%, -50%);
-}
-#sec-04 .gallery-02 .picture:nth-child(1) {
-  top: 50%;
-  left: 50%;
-}
-#sec-04 .gallery-02 .picture:nth-child(2) {
-  top: 60%;
-  left: 60%;
-}
-#sec-04 .gallery-02 .picture:nth-child(3) {
-  top: 40%;
-  left: 40%;
-}
-#sec-04 .gallery-02 .picture:nth-child(4) {
-  top: 50%;
-  left: 50%;
-}
-/* SECTION-04 */
-
-/* SECTION-05 */
-#sec-05 {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#sec-05 .poem {
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-#sec-05 .poem p {
-  font-size: 3rem;
-  line-height: 4rem;
-}
-/* SECTION-05 */
-
-/* SECTION-06 */
-#sec-06 .txt{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
-#sec-06 .txt h3 {
-  font-size: 5rem;
+.sec-01 .txt p {
+  margin: 20px 0;
 }
-/* SECTION-06 */
-
-
-/* MEDIA QUERY TB,MO AREA */
-@media (max-width: 768px) {
-  html {
-    font-size: 10px;
-  }
-  /* SECTION-02 */
-  #sec-02 .gallery-01 {
-    width: 320vw;
-  }
-  #sec-02 .gallery-01 .picture {
-    width: 40vw;
-    height: 40vw;
-  }
-  /* SECTION-02 */
+.sec-01 .txt p.tit {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.sec-01 .txt p span {
+  font-size: 2rem;
+}
+.sec-01 .txt p span.part-2 {}
+.sec-01 .txt p span.part-3 {
+  position: relative;
 }
