--- a/parallax/chul/css/style.css
+++ b/parallax/chul/css/style.css
@@ -53,5 +53,16 @@ html, body {
 }
 .sec-01 .txt p span.part-2 {}
 .sec-01 .txt p span.part-3 {
-  position: relative;
+  /* position: relative; */
+}
+.sec-02 .wrap {
+  position: absolute;
+  width: 1600px;
+}
+.sec-02 .cont-img {
+  width: 300px;
+  height: 500px;
+  background: #ccc;
+  float: left;
+  margin-right: 100px;
 }
